# gary_common

./: CMakeLists.txt  README.md  package.xml
include/gary_common/: diagnostic_aggregator.hpp  lifecycle_manager.hpp
src/: diagnostic_aggregator.cpp  lifecycle_manager.cpp
